--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - 5.6
 
 install:
-  - phpenv config-rm xdebu.ini
+  - phpenv config-rm xdebug.ini
   - export PATH="$HOME/.config/composer/vendor/bind:$PATH"
   - composer global require drupal/coder
   - phpcs --config-set installed_paths ~/.config/composer/vendor/drupal/coder/coder_sniffer
